URLs should now be resolved in a platform independent way
Issue: #73
Signed-off-by: Peter Gafert <peter.gafert@tngtech.com>